# TowelsSynth

./: Build Notes.rtf  CMakeLists.txt  README.md  TowelsSynth.jucer
Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
Builds/MacOSX/Towels Synth.xcodeproj/: project.pbxproj
Builds/MacOSX/Towels Synth.xcodeproj/project.xcworkspace/xcuserdata/traope.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/Towels Synth.xcodeproj/xcshareddata/xcschemes/: Towels Synth - All.xcscheme  Towels Synth - Standalone Plugin.xcscheme
Builds/MacOSX/Towels Synth.xcodeproj/xcuserdata/traope.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/VisualStudio2019/: Towels Synth.sln  Towels Synth_SharedCode.vcxproj  Towels Synth_SharedCode.vcxproj.filters  Towels Synth_StandalonePlugin.vcxproj  Towels Synth_StandalonePlugin.vcxproj.filters  Towels Synth_VST3.vcxproj  Towels Synth_VST3.vcxproj.filters  resources.rc
Builds/iOS/: Info-Standalone_Plugin.plist
Builds/iOS/Towels Synth.xcodeproj/: project.pbxproj
Resources/: magic.xml
Resources/ZZZ/: Command.xml  Commander1.xml  Tabbed.xml
Source/: PluginProcessor.cpp  PluginProcessor.h  PresetListBox.h  TowelsSynth.cpp  TowelsSynth.h
